--- a/src/Infrastructure/DigitalBank.Persistence/DigitalBank.Persistence.csproj
+++ b/src/Infrastructure/DigitalBank.Persistence/DigitalBank.Persistence.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="MimeKit" Version="4.14.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+    <PackageReference Include="Stripe.net" Version="50.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
