--- a/src/Presentation/DigitalBank.Api/Properties/launchSettings.json
+++ b/src/Presentation/DigitalBank.Api/Properties/launchSettings.json
@@ -22,6 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7055;http://localhost:5194",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
