--- a/src/Presentation/DigitalBank.Api/appsettings.Local.json
+++ b/src/Presentation/DigitalBank.Api/appsettings.Local.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=DigitalBankDb;Username=postgres;Password=1234"
-  },
+  }, //Environmente devops ve ya sis admin terefinden set edilir.
 
   "ApiBaseUrl": "https://localhost:7055",
   "ClientBaseUrl": "http://localhost:5173",
