--- a/src/Presentation/DigitalBank.Api/appsettings.json
+++ b/src/Presentation/DigitalBank.Api/appsettings.json
@@ -1,8 +1,10 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=DigitalBankDb;Username=postgres;Password=1234"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
   },
-
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
@@ -40,27 +42,5 @@
         }
       }
     ]
-  },
-
-  "JwtOptions": {
-    "Issuer": "DigitalBank",
-    "Audience": "DigitalBank.Client",
-    "Key": "CHANGE_THIS_TO_A_LONG_RANDOM_SECRET_KEY_32+",
-    "AccessTokenMinutes": 15,
-    "RefreshTokenDays": 30
-  },
-
-  
-
-
-  "SmtpOptions": {
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "UseSsl": false,
-    "UserName": "avazkm@code.edu.az",
-    "Password": "gapbsvqleklsbize",
-    "FromEmail": "avazkm@code.edu.az",
-    "FromName": "DigitalBank"
-  },
-  "ApiBaseUrl": "https://localhost:7055"
+  }
 }
